# research-assistant-back-end

./: .gitignore  API_REQUEST_RESPONSE_FORMATS.md  BACKEND_FUNCTIONALITY.md  database.py  download_marker_models.py  export_graph_image.py  jarvis_dev.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_chat.py  test_rag_pipeline.py
agents/: agents.py  graph.py  orchestrator.py  state.py
agents/nodes/: __init__.py  analyst.py  common.py  critic.py  librarian.py  scout.py  supervisor.py  synthesizer.py
api/: cache.py  chat.py  chats.py  documents.py  messages.py  upload.py
core/: config.py
services/: vector_store.py
tests/: test_rag_pipeline.py
tools/: search.py  vector_store.py
