[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-google-genai>=4.2.1",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0.0",
]
