[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "chromadb>=1.5.5",
    "fastapi==0.115.12",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.2.0,<1.0.0",
    "langchain-community>=0.3.0,<0.3.29",
    "langchain-google-genai>=2.1.0,<3.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.3.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "pydantic==2.11.1",
    "pydantic-settings>=2.8.1,<2.10.1",
    "sqlalchemy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]==0.34.0",
]
